fixed page width and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,19 @@ body {
     background-color: rgb(229, 243, 248);
 }
 
+/* header section styles */
 header {
-    padding: 12px;
     background-color: rgb(52, 66, 80);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    line-height: 1.5;
 }
 
+header h1 {
+    padding-left: 20px;
+    background-color: rgb(119, 216, 211);
+    margin: 10px 0 10px;
+}
 header h1 a {
     font-weight: bold;
     font-size: 42px;
@@ -51,52 +55,60 @@ header nav ul li a {
     font-weight: bold;
     text-decoration: underline;
 }
+
 /* hero styles section */
 .hero {
-    background-image: url(/css/images/Background.jpg);
+    background-image: url(/css/images/background3.jpg);
     width: 100%;
     height: 350px;
     background-size: cover;
     background-position: 100%;
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
     flex-direction: column;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
 }
-
 
 .hero h2 {
     font-weight: bold;
-    font-size: 35px;
+    font-size: 25px;
     margin: 0;
     background-color: rgb(119, 216, 211);
     color: black;
     padding: 5px;
     margin: 10px;
-   
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: row;
+    opacity: 0.8;
+}
+
+.hero img {
+    border-radius: 10%;
+    width: 150px;
+    height: auto;
 }
 
 /* about me section */
-.about-me {
+.about {
     display: flex;
     flex-wrap: wrap;
-    padding: 20px;
+    width: 100%;
+    margin: 20px 0;
 }
-.about-me img {
-    border-radius: 10%;
-    width: 110px;
-}
-.about-me h2 {
-    font-size: 45px;
-    width: 12%;
+
+.about h2 {
+    font-size: 30px;
+    width: 20%;
     text-align: left;
     display: flex;
     justify-content: flex-end;
     border-right: solid 3px;
     padding-right: 15px;
 }
-.about-me p {
+.about p {
     width: 70%;
     margin-left: 15px;
     display: flex;
@@ -105,24 +117,27 @@ header nav ul li a {
 }
 
 /* work section */
-
-.work{
+.work-section {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .section-title {
     font-size: 38px;
-    width: 20.4%;
+    width: 20%;
     display: flex;
     justify-content: flex-end;
     padding-right: 15px;
     border-right: solid 3px;
+    margin: 20px 0;
 }
 
 .section-content {
     width: 78%;
+    margin: 20px 0;
 }
+/* grid setup */
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -137,7 +152,7 @@ header nav ul li a {
     background-size: 100% 100%;
     grid-column:  span 2;
     grid-row: span 2;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: flex-end;
  }
@@ -146,7 +161,7 @@ header nav ul li a {
     height: 180px;
     background-image: url(/css/images/horiseon.PNG);
     background-size: 100% 100%;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
@@ -155,7 +170,7 @@ header nav ul li a {
     height: 180px;
     background-image: url(/css/images/house.PNG);
     background-size: 100% 100%;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
@@ -164,7 +179,7 @@ header nav ul li a {
     height: 180px;
     background-image: url(/css/images/fire.PNG);
     background-size: 100% 100%;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
@@ -173,7 +188,7 @@ header nav ul li a {
     height: 180px;
     background-image: url(/css/images/water.PNG);
     background-size: 100% 100%;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
@@ -183,16 +198,17 @@ header nav ul li a {
     width: 25%;
 }
 
-.contact-me {
+/* contact me section styles */
+.contact {
     display: flex;
     flex-wrap: wrap;
-    padding: 20px;
-    
+    width: 100%;
+    margin: 20px 0;
 }
 
-.contact-me h2 {
+.contact h2 {
     font-size: 45px;
-    width: 19.5%;
+    width: 20%;
     display: flex;
     justify-content: flex-end;
     padding-right: 15px;
@@ -202,10 +218,10 @@ header nav ul li a {
 .contact-details a {
     text-decoration: none underline;
     color: rgb(106, 122, 158);
-    font-size: 25px;
+    font-size: 20px;
     display: inline-block;
-    margin-left: 20px;
-    padding: 38px 55px;
+    margin-left: 10px;
+    padding: 45px 35px;
     text-align: center;
     font-weight: bold;
 }
